Get active security officers
