# api/customers.go
@@ -11,6 +11,35 @@ func (server *Server) SetUpCustomerRouter() {
 
 	server.router.POST("/customer/addNewDrone", server.addNewDroneForCustomer)
 	server.router.POST("/customer/createCustomer", server.addNewDroneForCustomer)
+	server.router.GET("/customer/getAllActiveOfficers", server.addNewDroneForCustomer)
+}
+
+type GetActiveOfficersRequest struct {
+	CustomerID int64 `json:"customerid" binding:"required"`
+}
+
+// CreateTags		godoc
+// @Summary			getActiveOfficers
+// @Description 	returns all active security officers.
+// @Param 			device body GetActiveOfficersRequest true "returns active security officers For Customer  in Db"
+// @Produce 		application/json
+// @Tags 			customer
+// @Success 		200 {object} string
+// @Router			/customer/getAllActiveOfficers [get]
+func (server *Server) getActiveOfficers(ctx *gin.Context) {
+
+	var req GetActiveOfficersRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	res, err := service.GetActiveOfficers(ctx, server.store, req.CustomerID)
+	if err != nil {
+		parseError(err, ctx)
+	}
+
+	ctx.JSON(http.StatusOK, res)
 }
 
 type CreateNewCustomerRequest struct {
