# service/customer.go
@@ -5,6 +5,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+func GetActiveOfficers(ctx *gin.Context, store db.Store, customerID int64) ([]db.User, error) {
+
+	activeCustomers, err := store.GetAllActiveSecurityOfficers(ctx, customerID)
+
+	if err != nil {
+		return []db.User{}, err
+	}
+
+	return activeCustomers, nil
+}
+
 func CreateNewCustomer(ctx *gin.Context, store db.Store, arg db.CreateNewCustomerParams) (db.User, error) {
 
 	customer, err := store.CreateNewCustomer(ctx, arg)
